overlay scrollbar bug resolved (#4)

--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #FAF3EB;;
   color: white;
+  overflow-x: hidden;
 }
 
 code {
